added grid block

--- a/website24/index.html
+++ b/website24/index.html
@@ -99,6 +99,33 @@
         </section>
 
 
+        <section class="grid">
+
+            <h2>BROWSE BY dress STYLE</h2>
+
+            <div class="grid_blocks">
+
+                <a class="grid_small grid_casual" href="#">
+                    Casual
+                </a>
+                <a class="grid_big grid_formal" href="#">
+                    Formal
+                </a>
+                <a class="grid_big grid_party" href="#">
+                    Party
+                </a>
+                <a class="grid_small grid_gym" href="#">
+                    Gym
+                </a>
+
+
+            </div>
+
+
+
+
+        </section>
+
 
 
     </main>
